[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/GUI_Equiped_item.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Quest/Quests.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Weapon_Icons_nobg_16x16.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/MaxStats.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Settings_Select_Language.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/Game_UI_Controller.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/Player_Stats_Controller.gd" type="Script" id=9]
[ext_resource path="res://Assets/sounds/Sound Panel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/UI/update_theme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/UI/Inventory.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Inventory/Weapon_Slot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/UI/Game_Theme.tres" type="Theme" id=14]
[ext_resource path="res://Assets/UI/Relics_UI.gd" type="Script" id=15]
[ext_resource path="res://Assets/UI/Description_Panel.gd" type="Script" id=16]
[ext_resource path="res://Assets/UI/Pause_Options.gd" type="Script" id=18]
[ext_resource path="res://Assets/UI/Fonts/dogicapixel.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Assets/UI/Fonts/dogicabold.ttf" type="DynamicFontData" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_detail = 1

[sub_resource type="DynamicFont" id=5]
size = 3
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=6]
size = 6
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 5
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 19 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 177.0 ],
"_edit_vertical_guides_": [ -50.0 ]
}

[node name="Game_UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 8 )

[node name="Items" type="Panel" parent="Game_UI"]
anchor_top = 0.835
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0499878
theme = ExtResource( 14 )
custom_styles/panel = SubResource( 1 )

[node name="item1" type="Sprite" parent="Game_UI/Items"]
position = Vector2( 28.75, 27.75 )
scale = Vector2( 1.375, 1.375 )
texture = ExtResource( 1 )
offset = Vector2( -10, -10 )
hframes = 2
frame = 1

[node name="weapon" type="Sprite" parent="Game_UI/Items/item1"]
position = Vector2( -10, -9.99999 )
z_as_relative = false
texture = ExtResource( 4 )
hframes = 6
vframes = 3
frame = 3

[node name="item1Text" type="Label" parent="Game_UI/Items/item1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0909
margin_top = -25.8182
margin_right = -12.0909
margin_bottom = -11.8182
rect_pivot_offset = Vector2( 13, 10 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Z"

[node name="item2" type="Sprite" parent="Game_UI/Items"]
position = Vector2( 54.875, 27.75 )
scale = Vector2( 1.4375, 1.375 )
texture = ExtResource( 1 )
offset = Vector2( -10, -10 )
hframes = 2
frame = 1

[node name="weapon" type="Sprite" parent="Game_UI/Items/item2"]
position = Vector2( -10, -10 )
z_as_relative = false
texture = ExtResource( 4 )
hframes = 6
vframes = 3
frame = 4

[node name="item2Text" type="Label" parent="Game_UI/Items/item2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.6957
margin_top = -26.2727
margin_right = -13.6957
margin_bottom = -12.2727
rect_pivot_offset = Vector2( 13, 10 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "X"

[node name="Stats" type="Panel" parent="Game_UI/Items"]
margin_left = 154.0
margin_top = 2.0
margin_right = 221.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -65, -2 )

[node name="HP" type="Label" parent="Game_UI/Items/Stats"]
margin_top = -1.99998
margin_right = 32.0
margin_bottom = 16.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "HP: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="Label" parent="Game_UI/Items/Stats"]
margin_top = 9.00002
margin_right = 27.0
margin_bottom = 27.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "MP"

[node name="AP" type="Label" parent="Game_UI/Items/Stats"]
margin_left = 32.0
margin_top = 9.00002
margin_right = 59.0
margin_bottom = 27.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "AP"

[node name="key_label" type="Label" parent="Game_UI/Items/Stats"]
margin_left = 32.0
margin_top = -0.999985
margin_right = 65.0
margin_bottom = 17.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Key: 0"

[node name="Weapons" type="Control" parent="Game_UI/Items"]
margin_left = 54.0
margin_top = 2.0
margin_right = 155.0
margin_bottom = 26.0

[node name="Inventory_List" type="Control" parent="Game_UI/Items/Weapons"]
margin_right = 88.0
margin_bottom = 24.0

[node name="Weapons_Center_Container" type="CenterContainer" parent="Game_UI/Items/Weapons/Inventory_List"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -12.0
margin_right = 52.0
margin_bottom = 12.0
theme = ExtResource( 14 )

[node name="Weapons_List" type="HBoxContainer" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container"]
margin_top = 2.0
margin_right = 92.0
margin_bottom = 22.0
theme = ExtResource( 14 )
alignment = 1

[node name="Weapon_Slot" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]

[node name="Weapon_Slot2" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 24.0
margin_right = 44.0

[node name="Weapon_Slot3" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 48.0
margin_right = 68.0

[node name="Weapon_Slot4" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 72.0
margin_right = 92.0

[node name="Level_Progress_Panel" type="Panel" parent="Game_UI"]
anchor_top = 0.735
anchor_right = 0.996
anchor_bottom = 0.829
margin_left = 144.0
margin_top = 2.05
margin_right = 0.895996
margin_bottom = 2.07001
theme = ExtResource( 5 )

[node name="Level" type="Label" parent="Game_UI/Level_Progress_Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 53.0
margin_bottom = 9.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "lvl 1"
valign = 1

[node name="xp" type="Label" parent="Game_UI/Level_Progress_Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -9.0
margin_bottom = 9.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "XP: 0/100"
align = 3
valign = 1

[node name="Title_Scene" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 17.0
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Title_Scene"]
one_shot = true
autostart = true

[node name="Title_Panel" type="Panel" parent="Title_Scene"]
visible = false
anchor_right = 1.525
anchor_bottom = 1.125
margin_top = 1.0
margin_right = 14.4
margin_bottom = 0.875

[node name="Title_Text" type="Label" parent="Title_Scene/Title_Panel"]
anchor_right = 1.0
anchor_bottom = 0.941
margin_left = 4.0
margin_right = -5.0
margin_bottom = 0.00299931
text = "Scene name"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Introdution_Buttons" type="Control" parent="."]
visible = false
anchor_top = 0.835
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.04999
margin_right = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Pause_Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="ColorRect" parent="Pause_Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -27.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Pause_Button_Container" type="VBoxContainer" parent="Pause_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -55.0
margin_right = 46.0
margin_bottom = 55.0
focus_neighbour_top = NodePath("Quests")
focus_neighbour_bottom = NodePath("Settings")
focus_next = NodePath("Settings")
focus_mode = 2

[node name="Settings" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_right = 92.0
margin_bottom = 13.0
theme = ExtResource( 11 )
text = "OPTIONS"
clip_text = true

[node name="Player" type="Button" parent="Pause_Options/Pause_Button_Container"]
visible = false
margin_top = 17.0
margin_right = 134.0
margin_bottom = 30.0
theme = ExtResource( 11 )
text = "PLAYER_INFO"
clip_text = true

[node name="Inventory" type="Button" parent="Pause_Options/Pause_Button_Container"]
visible = false
margin_top = 34.0
margin_right = 134.0
margin_bottom = 47.0
theme = ExtResource( 11 )
text = "INVENTORY"
clip_text = true

[node name="Relics" type="Button" parent="Pause_Options/Pause_Button_Container"]
visible = false
margin_top = 51.0
margin_right = 134.0
margin_bottom = 64.0
theme = ExtResource( 11 )
text = "RELICS"
clip_text = true

[node name="Quests" type="Button" parent="Pause_Options/Pause_Button_Container"]
visible = false
margin_top = 68.0
margin_right = 134.0
margin_bottom = 81.0
theme = ExtResource( 11 )
text = "QUESTS"
clip_text = true

[node name="Save" type="Button" parent="Pause_Options/Pause_Button_Container"]
visible = false
margin_top = 17.0
margin_right = 134.0
margin_bottom = 30.0
theme = ExtResource( 11 )
text = "SAVE_BUTTON_TEXT"
clip_text = true

[node name="UI_Containers" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Player_Info" type="Control" parent="UI_Containers"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="UI_Containers/Player_Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Label" type="Label" parent="UI_Containers/Player_Info"]
margin_right = 51.0
margin_bottom = 12.0
theme = ExtResource( 14 )
text = "PLAYER_INFO"

[node name="Max Stats" type="Panel" parent="UI_Containers/Player_Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -70.0
margin_right = -14.0
margin_bottom = 26.0
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Container" type="VBoxContainer" parent="UI_Containers/Player_Info/Max Stats"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MaxHp" type="Label" parent="UI_Containers/Player_Info/Max Stats/Container"]
margin_right = 96.0
margin_bottom = 18.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MAX_HP "

[node name="MaxMp" type="Label" parent="UI_Containers/Player_Info/Max Stats/Container"]
margin_top = 22.0
margin_right = 96.0
margin_bottom = 40.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MAX_MP "

[node name="MaxAp" type="Label" parent="UI_Containers/Player_Info/Max Stats/Container"]
margin_top = 44.0
margin_right = 96.0
margin_bottom = 62.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MAX_AP"

[node name="AttackPower" type="Label" parent="UI_Containers/Player_Info/Max Stats/Container"]
margin_top = 66.0
margin_right = 96.0
margin_bottom = 84.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ATK"

[node name="Description_Panel" type="Panel" parent="UI_Containers/Player_Info"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -54.0
margin_right = 109.0
theme = ExtResource( 5 )
script = ExtResource( 16 )

[node name="Description_Title" type="Label" parent="UI_Containers/Player_Info/Description_Panel"]
margin_right = 74.0
margin_bottom = 19.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Title"

[node name="Description_Label" type="Label" parent="UI_Containers/Player_Info/Description_Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Description"

[node name="Upgrades" type="Panel" parent="UI_Containers/Player_Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = 15.0
margin_right = -3.0
margin_bottom = -59.0
script = ExtResource( 9 )

[node name="Points" type="Label" parent="UI_Containers/Player_Info/Upgrades"]
margin_left = 8.0
margin_right = 64.0
margin_bottom = 19.0
theme = ExtResource( 14 )
text = "POINTS"

[node name="Panel" type="Panel" parent="UI_Containers/Player_Info/Upgrades"]
margin_left = 8.0
margin_top = 23.0
margin_right = 216.0
margin_bottom = 23.0

[node name="Upgrade_Panel" type="VBoxContainer" parent="UI_Containers/Player_Info/Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 22.0
margin_right = -8.0
margin_bottom = -5.0
focus_mode = 2

[node name="upgrade hp" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_right = 103.0
margin_bottom = 14.0
theme = ExtResource( 14 )
disabled = true
text = "UPGRADE_HP"

[node name="upgrade Magic" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 18.0
margin_right = 103.0
margin_bottom = 32.0
theme = ExtResource( 14 )
text = "UPGRADE_MP"

[node name="upgrade action points" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 36.0
margin_right = 103.0
margin_bottom = 50.0
theme = ExtResource( 14 )
text = "UPGRADE_AP"

[node name="upgrade atk" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 54.0
margin_right = 103.0
margin_bottom = 68.0
theme = ExtResource( 14 )
text = "UPGRADE_ATK"
clip_text = true

[node name="Settings" type="Control" parent="UI_Containers"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -85.0
margin_right = 112.0
margin_bottom = 85.0

[node name="background" type="ColorRect" parent="UI_Containers/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Sound Panel" parent="UI_Containers/Settings" instance=ExtResource( 10 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = -71.0
margin_top = 25.0
margin_right = 73.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="UI_Containers/Settings"]
margin_right = 51.0
margin_bottom = 12.0
theme = ExtResource( 14 )
text = "OPTIONS"

[node name="Control" type="Control" parent="UI_Containers/Settings"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -91.0
margin_bottom = -28.0

[node name="Panel" type="Panel" parent="UI_Containers/Settings/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_right = -37.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="UI_Containers/Settings/Control/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.5
margin_right = 62.5
margin_bottom = 18.0
theme = ExtResource( 14 )
text = "LANGUAGE_TITLE"
align = 1
valign = 1

[node name="Language_List" type="HBoxContainer" parent="UI_Containers/Settings/Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -7.0
margin_right = 60.5
margin_bottom = 7.0
script = ExtResource( 7 )

[node name="PT_Btn" type="Button" parent="UI_Containers/Settings/Control/Panel/Language_List"]
margin_right = 58.0
margin_bottom = 14.0
theme = ExtResource( 14 )
text = "SELECT_PT"

[node name="EN_Btn" type="Button" parent="UI_Containers/Settings/Control/Panel/Language_List"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 14.0
theme = ExtResource( 14 )
text = "SELECT_EN"

[node name="Inventory" parent="UI_Containers" instance=ExtResource( 12 )]
visible = false
margin_bottom = -28.0

[node name="Quests" parent="UI_Containers" instance=ExtResource( 3 )]
visible = false

[node name="Relics" type="Control" parent="UI_Containers"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="Relics_List" type="VBoxContainer" parent="UI_Containers/Relics"]
anchor_left = 0.0401786
anchor_top = 0.0294118
anchor_right = 0.200893
anchor_bottom = 0.852941
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ring" type="Button" parent="UI_Containers/Relics/Relics_List"]
margin_right = 36.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 14 )
text = "?"
icon_align = 1

[node name="necklace" type="Button" parent="UI_Containers/Relics/Relics_List"]
show_behind_parent = true
margin_top = 28.0
margin_right = 36.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 14 )
text = "?"
icon_align = 1

[node name="Boots_Of_Speed" type="Button" parent="UI_Containers/Relics/Relics_List"]
margin_top = 56.0
margin_right = 36.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 14 )
text = "?"
icon_align = 1

[node name="Ring_Of_Souls" type="Button" parent="UI_Containers/Relics/Relics_List"]
margin_top = 84.0
margin_right = 36.0
margin_bottom = 108.0
rect_min_size = Vector2( 24, 24 )
theme = ExtResource( 14 )
text = "?"
icon_align = 1

[node name="Text_Label" type="RichTextLabel" parent="UI_Containers/Relics"]
anchor_left = 0.241071
anchor_top = 0.0294118
anchor_right = 0.928571
anchor_bottom = 0.670588
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="timeout" from="Title_Scene/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Player" to="." method="_on_Player_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Relics" to="." method="_on_Relics_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Quests" to="." method="_on_Quests_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Save" to="." method="_on_Save_pressed"]
[connection signal="focus_entered" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade hp" to="UI_Containers/Player_Info/Description_Panel" method="_on_upgrade_hp_focus_entered"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade hp" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_hp_pressed"]
[connection signal="focus_entered" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade Magic" to="UI_Containers/Player_Info/Description_Panel" method="_on_upgrade_Magic_focus_entered"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade Magic" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_Magic_pressed"]
[connection signal="focus_entered" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade action points" to="UI_Containers/Player_Info/Description_Panel" method="_on_upgrade_action_points_focus_entered"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade action points" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_action_points_pressed"]
[connection signal="focus_entered" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade atk" to="UI_Containers/Player_Info/Description_Panel" method="_on_upgrade_atk_focus_entered"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade atk" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_atk_pressed"]
[connection signal="pressed" from="UI_Containers/Settings/Control/Panel/Language_List/PT_Btn" to="UI_Containers/Settings/Control/Panel/Language_List" method="_on_PT_Btn_pressed"]
[connection signal="pressed" from="UI_Containers/Settings/Control/Panel/Language_List/EN_Btn" to="UI_Containers/Settings/Control/Panel/Language_List" method="_on_EN_Btn_pressed"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/Ring" to="UI_Containers/Relics" method="_on_Ring_focus_entered"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/necklace" to="UI_Containers/Relics" method="_on_necklace_focus_entered"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/Boots_Of_Speed" to="UI_Containers/Relics" method="_on_Boots_Of_Speed_focus_entered"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/Ring_Of_Souls" to="UI_Containers/Relics" method="_on_Ring_Of_Souls_focus_entered"]
